Fixed spacing issue with home page

--- a/GroupProject/style.css
+++ b/GroupProject/style.css
@@ -52,12 +52,14 @@ main {
 
 button {
     background-color: #616161; /* Dark grey button */
-    color: white;
+    color: palevioletred;
+    font-size: larger;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-bottom: 80px;
 }
 
 button:hover {
@@ -82,6 +84,10 @@ h1.title {
     background-color: #f9f9f9;
     justify-content: center;
     position: relative;
+}
+
+main {
+    text-align: center;
 }
 
 .block1 {
